05-Sidecar/02-egress-proxy/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foo
  labels:
    istio-injection: "enabled"
